# jwuff

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml
src/main/java/com/agulev/jwuff/: JwuffImageIO.java
src/main/java/com/agulev/jwuff/io/: ByteArrayImageInputStream.java
src/main/java/com/agulev/jwuff/metadata/: BasicImageMetadata.java
src/main/java/com/agulev/jwuff/model/: FrameResult.java  ProbeResult.java
src/main/java/com/agulev/jwuff/nativelib/: NativeLibrary.java  WuffsException.java  WuffsFFI.java  WuffsTypes.java
src/main/java/com/agulev/jwuff/reader/: AbstractWuffsImageReader.java  WuffsJpegImageReader.java  WuffsPngImageReader.java
src/main/java/com/agulev/jwuff/spi/: AbstractWuffsImageReaderSpi.java  ByteArrayImageInputStreamSpi.java  WuffsJpegImageReaderSpi.java  WuffsMagic.java  WuffsPngImageReaderSpi.java
src/native/: CMakeLists.txt  wuffs_imageio_abi.c  wuffs_imageio_abi.h
src/test/java/com/agulev/jwuff/: ByteArrayImageInputStreamTest.java  CorruptPngTest.java  ImageIoReadByteArrayPerformanceTest.java  ImageIoReadIntegrationTest.java  JfrAllocations.java  JpegDecodeTest.java  MemoryAndGcTest.java  MetadataTest.java  NativeResourceTest.java  PerformanceComparisonAlwaysTest.java  PerformanceComparisonTest.java  PngDecodeTest.java  PngMultithreadedStressTest.java  SpiRegistrationTest.java  ThreadAllocations.java  ZeroCopyPngTest.java
